Interface/formatting changes * stop returning ace object from api (CDS.pm, Transcript.pm) * add lab name as label in case no Mail tag * fix issue with long object type in search bar * extend width of sequences displayed in lightbox * change to one column if content too large to fit in widget holder * cleaning sidebar movement * don't call WB.init() more than once per page * formatting on smaller pages * fix lightbox on expr_pattern pages * fix laboratory macro to handle lists

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -904,7 +904,7 @@ a#fade:hover {
   color:black;
   font-size:0.9em;
   position:relative;
-  max-width:10em;
+  max-width:15em;
 }
 
 #searchSelect li:hover{
@@ -2054,7 +2054,7 @@ div#google-map {
     overflow: hidden;
     clear: both;
     margin: 5px;
-    max-width:54em;
+    width:55em;
 }
 
 
